crates/parsing/src/grammar/snapshots/parsing__grammar__tests__invalid-record-field.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: { 1: "hello" }

Start { kind: LiteralExpression }
  Start { kind: LiteralRecord }
    Token { kind: LeftCurly }
    Start { kind: RecordField }
      Start { kind: Error }
        Token { kind: LiteralInteger }
        Error { message: "expected a label" }
      Finish
      Token { kind: Colon }
      Start { kind: LiteralExpression }
        Token { kind: LiteralString }
      Finish
    Finish
    Error { message: "expected Comma" }
    Token { kind: RightCurly }
  Finish
Finish
