crates/parsing/src/grammar/snapshots/parsing__grammar__tests__invalid-record-pun.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: { "a" }

Start { kind: LiteralExpression }
  Start { kind: LiteralRecord }
    Token { kind: LeftCurly }
    Start { kind: RecordField }
      Start { kind: Name }
        Token { kind: Label }
      Finish
      Error { message: "expected Colon" }
      Error { message: "expected an expression" }
    Finish
    Error { message: "expected Comma" }
    Token { kind: RightCurly }
  Finish
Finish
