crates/parsing/src/grammar/snapshots/parsing__grammar__tests__kinded-type.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: Type :: Type

Start { kind: KindedType }
  Start { kind: ConstructorType }
    Start { kind: QualifiedName }
      Start { kind: NameRef }
        Token { kind: Upper }
      Finish
    Finish
  Finish
  Token { kind: Colon2 }
  Start { kind: ConstructorType }
    Start { kind: QualifiedName }
      Start { kind: NameRef }
        Token { kind: Upper }
      Finish
    Finish
  Finish
Finish
