crates/parsing/src/grammar/snapshots/parsing__grammar__tests__minus-is-operator-name.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: (-)

Start { kind: OperatorNameExpression }
  Start { kind: QualifiedName }
    Start { kind: Wrapped }
      Token { kind: LeftParenthesis }
      Start { kind: NameRef }
        Token { kind: Operator }
      Finish
      Token { kind: RightParenthesis }
    Finish
  Finish
Finish
