crates/parsing/src/grammar/snapshots/parsing__grammar__tests__minus-is-operator.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: 1 - 2

Start { kind: ExpressionOperatorChain }
  Start { kind: LiteralExpression }
    Token { kind: LiteralInteger }
  Finish
  Start { kind: OperatorPair }
    Start { kind: SymbolOperator }
      Start { kind: QualifiedName }
        Start { kind: NameRef }
          Token { kind: Operator }
        Finish
      Finish
    Finish
    Start { kind: LiteralExpression }
      Token { kind: LiteralInteger }
    Finish
  Finish
Finish
