crates/parsing/src/grammar/snapshots/parsing__grammar__tests__negative-binder.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: -1
Start { kind: NegativeBinder }
  Token { kind: Minus }
  Start { kind: LiteralBinder }
    Token { kind: LiteralInteger }
  Finish
Finish
